Done: about > mission mobile fixed
In progress:
The rest of about, also ids need to be added

--- a/static/thesignal.css
+++ b/static/thesignal.css
@@ -82,7 +82,6 @@ body > * {
     margin-bottom: 30px;
 }
 
-
 #header {
     padding: 20px 5% 20px 5%;
 
@@ -175,7 +174,6 @@ body > * {
 
     margin-right: 8px;
 }
-
 
 .ui.link.card {
     border-radius: 16px;
@@ -313,7 +311,6 @@ body > * {
     margin-left: -10px;
     margin-top: -10px;
 }
-
 
 .ui.card:not(.featured) .content .header:not(.ui) {
     font-size: 20px !important;
@@ -945,7 +942,6 @@ body > * {
     margin-bottom: 20px;
 }
 
-
 /* Footer */
 
 .site-footer {
@@ -1091,4 +1087,30 @@ body > * {
     .ui.card:not(.featured):not(.author) .extra.content {
         /*display: none;*/
     }
+}
+
+
+/*====================================================
+	Fixed About mobile
+====================================================*/
+
+@media only screen and (max-width: 850px) {
+    #about-mission {
+        flex-direction: column;
+        padding-left: 5px;
+        padding-right: 5px;
+        width: 100%;
+        border: 1px solid red;
+    }
+
+    #about-mission-statement {
+        width: 100%;
+        margin-top: -10px;
+        padding-top: 0;
+    }
+
+    #about-mission-header{
+        width: 35%;
+    }
+
 }
